--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,23 @@
 @charset "utf-8";
+
+.inner{
+  width: 1100px;
+  background-color: #fff;
+}
+
+.nav_container{
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
+.nav_archway{
+  margin: 5px 0;
+}
+
+.btn_contact{
+  color: #fff;
+  background-color: #689cc5;
+  font-size: 16px;
+  margin: 1em 1em;
+}
