--- a/css/style.css
+++ b/css/style.css
@@ -67,11 +67,12 @@
   background-position: center;
   background-size: contain;
   height: 250px;
-  width: 250px;
+  width: 40%;
 }
 
 .work_Textbox{
   text-align: center;
+  width: 60%;
 }
 
 .work_title{
@@ -190,3 +191,44 @@
   height: 300px;
   width: 300px;
 } 
+
+.plan{
+  position: relative;
+  background-color: #cfdde6;
+}
+
+.plan_Textbox{
+  text-align: center;
+}
+
+.plan_title{
+  padding: 50px 0px;
+  font-size: 60px;
+  letter-spacing: 10px;
+}
+
+.plan_table{
+  width: 90%;
+  margin: auto;
+  padding-bottom: 50px;
+  table-layout: fixed;
+  font-size: 16px;
+}
+
+.plan_table th{
+  background-color: #2756cc;
+  padding: 5px;
+  border: 1px solid #000;
+  line-height: 26px;
+}
+
+.plan_table td{
+  padding: 5px;
+  text-align: center;
+  border: 1px solid #000;
+  line-height: 22px;
+}
+
+.plan_table tr{
+  background-color: #fff;
+}
