--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,14 @@
   margin: 1em 1em;
 }
 
+a{
+  text-decoration: none;
+}
+
+.btn_contact a:link, .btn_contact a:visited{
+  color: #fff;
+}
+
 .keyvisual{
   position: relative;
 }
@@ -195,6 +203,7 @@
 .plan{
   position: relative;
   background-color: #cfdde6;
+  padding-bottom: 50px;
 }
 
 .plan_Textbox{
@@ -218,17 +227,45 @@
 .plan_table th{
   background-color: #2756cc;
   padding: 5px;
-  border: 1px solid #000;
+  border: 1px solid #2756cc;
   line-height: 26px;
 }
 
 .plan_table td{
   padding: 5px;
   text-align: center;
-  border: 1px solid #000;
+  border: 1px solid #fff;
   line-height: 22px;
 }
 
 .plan_table tr{
   background-color: #fff;
+}
+
+.plan_table tr:nth-child(even){
+  background-color: #deebf8;
+}
+
+.sns{
+  position: relative;
+  background-color: #e2eff8;
+  padding: 200px 0px;
+}
+
+.sns_link{
+  display: flex;
+  justify-content: space-around;
+  padding: 25px 0px;
+  text-align: center;
+}
+
+.sns_link li{
+  display: inline-block;
+  width: 185px;
+  font-size: 40px;
+  color: #7a7f80;
+}
+
+.sns_link li a:link, .sns_link li a:visited{
+  color: #7a7f80;
 }
