0427内容2（footer部分レスポンシブ対応追加、keyvisual部分レスポンシブ対応立幅修正

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,18 @@ a{
   padding-top: 30px;
 }
 
+/* ★★★★keyvisual部分レスポンシブ対応（TAB）★★★★ */
+@media screen and (min-width:1101px) and (max-width:1199px) {
+  .keyvisual_Img{
+    background-size: 100% 635px;
+    height: 635px;
+  }
+  .keyvisual_title{
+    font-size: 40px;
+    padding-top: 250px;
+  }
+}
+
 /* ★★★★keyvisual部分レスポンシブ対応（SP）★★★★ */
 @media screen and (max-width:767px) {
   .keyvisual{
@@ -546,4 +558,11 @@ a{
 .footer_text{
   text-align: right;
   padding-right: 40px;
+}
+
+/* ★★★★footer部分レスポンシブ対応（SP）★★★★ */
+@media screen and (max-width:767px){
+  .footer{
+    width: 100%;
+  }
 }
